--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,6 @@
     <link rel="stylesheet" href="{{ url_for('static',    filename='css/styles.css') }}">
 </head>
 <body>
-    <h1>Hello, {{ name }}! Welcome to the Site.</h1>
+    <h1>Hello and pleased to have you here, {{ username }}!</h1>
 </body>
 </html>
