--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,5 +12,6 @@ body {
     place-items: center;
     width: 100%;
     height: 100%;
-    /* padding: 2.5%; */
+    padding: 2.5%;
+    text-align: center;
 }
